scss/_patterns_form-tick-elements.scss
@import 'settings';

@mixin vf-p-form-tick-elements {
  // contain the absolutely positioned input
  .p-checkbox,
  .p-checkbox--heading,
  .p-checkbox--inline,
  .p-radio,
  .p-radio--heading,
  .p-radio--inline {
    $asterisk-width: 1ch;

    position: relative;
    // repositioning asterisk in front of the label
    &.is-required {
      &::before {
        display: block;
        left: $sph-inner + $form-tick-box-size;
        position: absolute;
        width: $asterisk-width;
      }
      .p-radio__label,
      .p-checkbox__label {
        padding-left: calc(#{$sph-inner + $form-tick-box-size} + #{$asterisk-width});
      }
    }
  }

  // specify both [type] and class to fight specificity of base `label [type]` styles
  [type='checkbox'].p-checkbox__input,
  [type='radio'].p-radio__input {
    @extend %vf-hidden-tick-input;

    // adjust position of hidden inputs to place them approximately on the baseline
    bottom: 0.2em;
  }

  .p-checkbox__label {
    @extend %vf-pseudo-tick-box;
    @extend %vf-pseudo-checkbox;
  }

  .p-radio__label {
    @extend %vf-pseudo-tick-box;
    @extend %vf-pseudo-radio;
  }

  // inline variants
  .p-checkbox--heading,
  .p-checkbox--inline,
  .p-radio--heading,
  .p-radio--inline {
    display: inline;
  }

  // nudge ticks in headings back to the baseline
  .p-checkbox--heading .p-checkbox__label,
  .p-radio--heading .p-radio__label {
    &::before,
    &::after {
      margin-top: -$form-tick-box-nudge;
    }
  }

  // fake tick checked state
  .p-checkbox__input:checked + .p-checkbox__label,
  .p-radio__input:checked + .p-radio__label {
    @extend %vf-pseudo-tick-box-checked;
  }

  // fake tick focused state
  .p-checkbox__input:focus + .p-checkbox__label,
  .p-radio__input:focus + .p-radio__label {
    @extend %vf-pseudo-tick-box-focused;
  }

  // fake tick disabled state
  .p-checkbox__input:disabled + .p-checkbox__label,
  .p-radio__input:disabled + .p-radio__label {
    @extend %vf-disabled-element;
  }

  // when tick elements are following each other in the document
  // keep them closer together by 1 baseline grid unit
  .p-radio + .p-radio,
  .p-checkbox + .p-checkbox,
  .p-checkbox + .p-radio,
  .p-radio + .p-checkbox {
    margin-top: -$sp-unit;
  }

  // Theming
  @if ($theme-default-forms == 'dark') {
    .p-checkbox__label {
      @include vf-checkbox-dark-theme;
    }

    .p-radio__label {
      @include vf-radio-dark-theme;
    }

    .p-checkbox.is-light .p-checkbox__label {
      @include vf-checkbox-light-theme;
    }

    .p-radio.is-light .p-radio__label {
      @include vf-radio-light-theme;
    }
  } @else {
    .p-checkbox__label {
      @include vf-checkbox-light-theme;
    }

    .p-radio__label {
      @include vf-radio-light-theme;
    }

    .p-checkbox.is-dark .p-checkbox__label {
      @include vf-checkbox-dark-theme;
    }

    .p-radio.is-dark .p-radio__label {
      @include vf-radio-dark-theme;
    }
  }
}

